# hexa_tic_tac_toe

./: .gitignore  GEMINI.md  README.md  benchmark.py  export_game.py  game.py  main.py  print_hex_coords.py  pyproject.toml  replay.py  showcase.py  test_game.py  test_history.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/experiment/: fast_test.yaml
docs/dev/: style_guide.md  terminology.md
scripts/: benchmark.py  export_game.py  replay.py  showcase.py  sync_config.py  train.py
src/hexa_tic_tac_toe/: __init__.py  cli.py
src/hexa_tic_tac_toe/agent/: __init__.py  buffer.py  config.py  evaluate.py  mcts.py  network.py  orchestrator.py  player.py  train.py  trainer.py
src/hexa_tic_tac_toe/core/: constants.py  engine.py  logic.py
src/hexa_tic_tac_toe/env/: __init__.py  pettingzoo_env.py  pgx_env.py
temp_src/: App.jsx  index.css
tests/: test_agent.py  test_env.py  test_game.py  test_history.py  test_pgx_env.py
visualizer/: .gitignore  package-lock.json  package.json
visualizer/public/: game_data.json
visualizer/src/: App.css  App.tsx  config.json  main.tsx
visualizer/src/components/: HexCell.tsx
visualizer/src/types/: index.ts
visualizer/src/utils/: hexMath.ts
