[project]
name = "hexa-tic-tac-toe"
version = "0.1.0"
description = "Hexagonal Tic Tac Toe Game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "pytest>=8.0.0",
    "pettingzoo>=1.25.0",
    "numpy>=2.4.3",
    "pgx>=2.6.0",
    "flax>=0.12.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
